testing/framework/resources/Advanced/Failing/mondrian/query6581.e
USA	CA	Altadena	6617	Diane Acuna	Diane Acuna	F	M	Partial High School	$10K - $30K
USA	CA	Arcadia	705	Kay Kartz	Kay Kartz	F	S	Partial College	$30K - $50K
USA	CA	Bellflower	6754	Beatrix Stevens	Beatrix Stevens	M	M	High School Degree	$90K - $110K
USA	CA	Bellflower	2533	Louis Jackson	Louis Jackson	M	M	Bachelors Degree	$50K - $70K
USA	CA	Burbank	5144	Abel Hawkins	Abel Hawkins	M	S	Bachelors Degree	$70K - $90K
USA	CA	Burbank	9622	Clara Barber	Clara Barber	F	S	Partial High School	$30K - $50K
USA	CA	Coronado	7236	Diane Cole	Diane Cole	F	S	Partial High School	$10K - $30K
USA	CA	Downey	9855	Karen Carr	Karen Carr	F	S	Partial High School	$30K - $50K
USA	CA	El Cajon	3321	Arnold Cole	Arnold Cole	M	S	High School Degree	$30K - $50K
USA	CA	El Cajon	6894	Vernon Elmore	Vernon Elmore	M	M	Bachelors Degree	$50K - $70K
USA	CA	Glendale	1738	Howard King	Howard King	M	S	Partial High School	$10K - $30K
USA	CA	Grossmont	3540	Monica Ardon	Monica Ardon	M	S	Partial College	$50K - $70K
USA	CA	Lakewood	3352	Lillian McCormick	Lillian McCormick	F	M	Bachelors Degree	$70K - $90K
USA	CA	National City	9858	Lawrence Villamar	Lawrence Villamar	F	M	Partial High School	$10K - $30K
USA	CA	Newport Beach	9019	Andy Schilleroff	Andy Schilleroff	M	M	Bachelors Degree	$50K - $70K
USA	CA	Newport Beach	1389	Anna-lee Pope	Anna-lee Pope	M	M	High School Degree	$30K - $50K
USA	CA	Torrance	2869	Steven Woods	Steven Woods	F	S	High School Degree	$10K - $30K
USA	CA	Woodland Hills	907	Emilio Martinez	Emilio Martinez	F	M	Partial High School	$90K - $110K
